Fix for scroll problems
- Header doesn't stick on top
- When open, off-canvas menu generates an horizontal scrollbar
- Added fake menu items to check the off-canvas menu scrolling

--- a/wpak-off-canvas-android/css/common.css
+++ b/wpak-off-canvas-android/css/common.css
@@ -36,7 +36,14 @@ body {
 /*
  * @desc Enclose all app's elements (auto-added)
  */
-#app-layout {}
+#app-layout {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    overflow: hidden;
+}
 
 /*
  * @desc Enclose app's menu (auto-added)
@@ -47,7 +54,7 @@ body {
     left: 0px;
     bottom: 0px;
     width: 85%;
-    z-index: 0; /* Positionned under the app's canvas */
+    z-index: 0; /* Positionned under the app's canvas / z-index relative to #app-layout */
     overflow-y: scroll;
 }
 
@@ -60,21 +67,15 @@ body {
     left: 0px;
     bottom: 0px;
     width: 100%;
-    z-index: 10; /* Positionned above the app's menu */
+    z-index: 10; /* Positionned above the app's menu / z-index relative to #app-layout */
     background-color: #fff;
+    overflow: hidden;
 }
 
 /*
  * @desc Enclose content (auto-added) 
  */
-#app-content-wrapper {
-    position: absolute;
-    top: 50px;
-    left: 0px;
-    width: 100%;
-    z-index: 0; 
-	background-color:#fff;
-}
+#app-content-wrapper {}
 
 /*
  * @desc Enclose content (auto-added) 
@@ -96,7 +97,7 @@ body {
 	width: 100%;
 	height: 50px;
 	text-align: center;
-    z-index: 0;
+    z-index: 0; /* z-index relative to #app-canvas */
 }
 
 /**
@@ -198,13 +199,14 @@ body {
 
 
 .content {
-    position: relative;
-    top: 0;
-    left: 0;
+    position: absolute;
+    top: 50px;
+    bottom: 0px;
+    left: 0px;
 	width: 100%;
+    overflow-y: scroll;
+    z-index: 0; /* z-index relative to #app-canvas */
 }
-
-
 
 /*
  * @desc Off-canvas menu
